Create CollectionToDtoMapper in core module.
See commit 689e5ae95645768b024dee52c10451c944a41527.
Useful for hg plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -252,6 +252,25 @@
         <version>${resteasy.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>javax.ws.rs</groupId>
+        <artifactId>javax.ws.rs-api</artifactId>
+        <version>${jaxrs.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+
+
     </dependencies>
   </dependencyManagement>
 
