Brings mapstruct processor back to plugin and webapp.

--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -378,6 +378,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-processor</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
