--- a/scm-plugins/pom.xml
+++ b/scm-plugins/pom.xml
@@ -38,12 +38,19 @@
       <scope>provided</scope>
     </dependency>
     
-    <!-- annotation processor -->
+    <!-- annotation processors -->
     
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-annotation-processor</artifactId>
       <version>2.0.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <!-- Annotation processor for DTO mappers-->
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-processor</artifactId>
       <scope>provided</scope>
     </dependency>
     
